# daita-studio

./: .gitignore  BACKLOG.md  CLAUDE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
backend/: requirements.txt
backend/app/: __init__.py  config.py  conversion_service.py  lineage_service.py  main.py
backend/app/api/: diagrams.py  etl.py  import_td.py  jobs.py  lineage_flow.py  metadata.py  modeler.py  source_api.py  templates.py
backend/app/models/: __init__.py  etl_models.py  lineage_models.py  metadata_models.py  source_models.py
backend/app/services/: ddl_executor.py  etl_service.py  import_service.py  (+13 more)
cfg/: config.yml  conversion_config.yaml  database.yml.template  parameter_rules.yml
ddl/sql_templates/: README.md
diagrams/: CONS_LAYER.json  DISC_LAYER.json  REUS_LAYER.json
docs/: AIRGAP_DEPLOYMENT_PROMPT.md  FLOW_UX_KONZEPT.md  JOB_DETAIL_KONZEPT.md  LINEAGE_DATAFLOW_KONZEPT.md  PLAN_GUI_INTEGRATION.md  TEMPLATE_PARAMETER_REFERENCE.md
frontend/: app.js  architecture.drawio  architecture.html  config.js  data-flow.html  design-demo.html  etl-dashboard.html  etl-dashboard.js  flow.html  index.html  jobs.html  lineage-flow.html  lineage.html  metadata-dashboard.html  metadata-dashboard.js  metadata-explorer.html  metadata-explorer.js  modeler.html  pipeline.html  source-systems.html  source-systems.js  style.css  test-api.html
frontend/components/: api.js  column-selector.js  etl-wizard.js  job-detail.js  job-list.js  lineage-graph.js  nav-header.js  source-wizard.css  source-wizard.js  table-bottom-panel.js  table-editor.js
(+439 files in other folders)
