[project]
name = "daita-studio"
version = "0.1.0"
description = "Modeler • ETL Orchestrator • Metadata Platform für Teradata DWH"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.2",
    "sqlglot>=28.6.0",
    "requests>=2.32.5",
    "python-multipart>=0.0.12",
    "PyYAML>=6.0",
    "httpx>=0.27.0",
    "teradatasql>=20.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Für Offline-Installation: uv sync --offline
